platform_versioned_docs/version-4.4.0/install/helm.mdx
---
title: Deploy using Helm
sidebar_label: Using Helm
sidebar_position: 2
description: Learn how to deploy and configure the platform using Helm
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import LoginToPlatformAfterHelmInstall from "../_partials/install/login-after-helm-install.mdx";
import InstallNextSteps from "../_partials/install/install-next-steps.mdx";
import ListHelmVersions from "../_partials/install/list-helm-versions.mdx";

import BasePrerequisites from "../_partials/install/base-prerequisites.mdx";
import LicenseEgress from '../_partials/install/license-egress.mdx';
import NetworkPorts from '../_partials/install/open-ports.mdx';

The platform can be deployed directly using Helm commands. Managing the platform deployment with Helm directly can be a great way to "GitOps" your platform
deployment, by using ArgoCD or other GitOps tools to manage the platform deployment. This section outlines the basics of deploying and managing the platform with
Helm, and can serve as a solid starting point for managing the platform
in a GitOps fashion as well.

## Prerequisites

<BasePrerequisites />

### Resource requirements

<LicenseEgress />
<NetworkPorts />

For more detailed information about networking requirements, see [Networking](/docs/platform/4.4.0/administer/clusters/advanced/networking).


## Deployment

The platform deployment via Helm is similar to any Helm chart deployment.

### Add the repository

If you haven't done so, add the Loft Helm repository and update.

```bash title="Add Loft Helm repository"
helm repo add loft https://charts.loft.sh
helm repo update
```

### Deploy the platform

```bash title="Deploy the platform"
RELEASE_NAME=vcluster-platform
RELEASE_NAMESPACE=vcluster-platform
PLATFORM_VERSION='' # Set this to a specific version or leave empty to deploy the latest version

helm upgrade $RELEASE_NAME vcluster-platform \
  --install \
  --repo https://charts.loft.sh/ \
  --namespace $RELEASE_NAMESPACE \
  --create-namespace \
  ${PLATFORM_VERSION:+--version $PLATFORM_VERSION}
```

You should see output similar to the following:

```bash title="Output of the Helm deploy command"
Release "vcluster-platform" does not exist. Installing it now.
NAME: vcluster-platform
LAST DEPLOYED: Fri Oct  4 13:10:52 2024
# highlight-start
NAMESPACE: vcluster-platform
STATUS: deployed
# highlight-end
REVISION: 1
TEST SUITE: None
NOTES:
Thank you for installing vcluster-platform.
```

<ListHelmVersions />
## Configuration

### Customize values

As with most Helm charts, the `vcluster-platform` chart supports many
user-configurable values to modify the deployment of resources. You can find the
`vcluster-platform` chart in the Loft public repository
[here](https://github.com/loft-sh/loft/tree/master/chart). The `values.yaml`
file in the chart repository contains the default values, as well as many
comments showing optional values and additional information.

To customize your deployment, you can either:

1. Copy the default values file and modify it to suit your deployment needs, or
2. Create a new YAML file containing only the desired values settings.

### Configure platform options

Inside the `values.yaml` file, there is a `config` field, which contains the
configuration options for the platform. These options are available in the UI
under `Admin` > `Config` section and can be edited either through the
`values.yaml` or the UI. There is a detailed list of [available configuration
options](../configure/config) in the docs.

### Set recommended values

There are a set of fields in the `values.yaml` that are recommended to explicitly set:

- `config.loftHost` - Sets a publicly resolvable hostname. This value should be the same as the `ingress.host` if an 
ingress is configured for the installation.
:::note Loft Router
vCluster provides a hosted domain for the vCluster platform, referred as the Loft Router.
The Loft Router enables you to trial the vCluster platform using a hosted domain by vCluster. This is particularly useful when you cannot 
use your own DNS to create an ingress for the vCluster platform but still wants the trial environment accessible via the public internet.
It is enabled by default. You can disable it by either:
- Explicitly setting `config.loftHost` and `config.devPodSubDomain`, or
- Setting the environment variable `DISABLE_LOFT_ROUTER=true`.
```bash title="Set the environment variable to disable Loft Router"
helm upgrade vcluster-platform vcluster-control-plane --install \
 --repo https://charts.loft.sh/ \
 --namespace vcluster-platform \
 --create-namespace \
 --values values.yaml \
 --set env.DISABLE_LOFT_ROUTER='true'
```
:::
- `admin.username` - Sets the username of an administrator user. By default, the username is `admin`.
- `admin.password` - Sets the password of an administrator user. By default, the username is `my-password`.

```yaml title="Recommended values.yaml and config section."
admin:
  username: my-own-username
  password: my-unique-password
config:
  audit:
    enabled: true
  loftHost: vcluster-platform.mytld.com

ingress:
  enabled: true
  host: vcluster-platform.mytld.com
```
- `env` – Defines environment variables for the vCluster platform components. By default, this field is empty.
A common use case is configuring network access between the vCluster platform and managed virtual clusters to allow API communication.
If both the platform and the virtual clusters run on the same host cluster, you should also configure the `NO_PROXY` (or `no_proxy`) environment variable to bypass proxies for internal traffic if you are using proxies.
Otherwise, the platform will be unable to reach the vCluster control plane Service, and features such as the Cost Control dashboard will fail to function properly.
```yaml title="values.yaml"
env:
  NO_PROXY: localhost,127.0.0.1,.svc,.svc.cluster.local,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  no_proxy: localhost,127.0.0.1,.svc,.svc.cluster.local,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  HTTPS_PROXY: "https://proxy.example.com:8080"
  HTTP_PROXY: "http://proxy.example.com:8080"
  https_proxy: "https://proxy.example.com:8080"
  http_proxy: "http://proxy.example.com:8080"
```

### Apply custom configuration

Values files can be passed to the Helm upgrade command. Update `$PLATFORM_VERSION` with a valid platform version.

```bash title="Deploy with custom values.yaml."
RELEASE_NAME=vcluster-platform
RELEASE_NAMESPACE=vcluster-platform
PLATFORM_VERSION='' # Set this to a specific version or leave empty to deploy the latest version

helm upgrade $RELEASE_NAME vcluster-platform \
  --install \
  --repo https://charts.loft.sh/ \
  --namespace $RELEASE_NAMESPACE \
  --create-namespace \
  --values values.yaml \
  ${PLATFORM_VERSION:+--version $PLATFORM_VERSION}
```

You can provide multiple values files if desired by specifying additional
file names after the `--values` flag. This can be handy if you prefer to break up
the values sections into different files.

Helm has many additional flags and other ways to pass values. As always, it's a great idea to check out the Helm [docs](https://Helm.sh/docs/) to stay up to date on Helm.

## Login

<LoginToPlatformAfterHelmInstall />

Navigate to the domain in your browser and log in with the default credentials or
the credentials you set in `values.yaml` and complete the profile setup.

## Next steps

### Create virtual clusters

<InstallNextSteps />
